# Bredonk

./: CMakeLists.txt  CMakePresets.json  README.md
tak_engine/: CMakeLists.txt  my.txt  params.h  py.txt  tak_engine.cpp  tak_engine.h
tak_engine/search/: perft.h  search.cpp  search.h  zobrist.cpp  zobrist.h
tak_engine/tak/: bitboard.h  enums.h  eval.cpp  eval.h  magic.cpp  magic.h  magic_road.cpp  magic_road.h  move.cpp  move.h  move_iterator.cpp  move_iterator.h  move_list.cpp  move_list.h  piece.h  stack.h  tak_board.cpp  tak_board.h
tak_engine/util/: optparse.h  random.h
